--- a/notes/localrefs.bib
+++ b/notes/localrefs.bib
@@ -9,6 +9,18 @@ pages={1--5},
 doi={10.1016/j.bpj.2018.05.033},
 }
 
+@article{nardi15,
+title={{S}chauder estimate for solutions of {P}oisson's equation with {N}eumann boundary condition},
+author={G. Nardi},
+year=2015,
+journal={Enseign. Math.},
+volume=60,
+number=3,
+pages={421--435},
+eprint={1302.4103},
+doi={10.4171/LEM/60-3/4-9},
+}
+
 @book{logan,
 author="Logan, D.",
 title="Applied Mathematics",
